@@ -2,20 +2,20 @@ package org.iut.refactoring;
 
 class GestionApp {
     public static void main(String[] args) {
-        GestionPersonnel app = new GestionPersonnel();
+        GestionPersonnel app = new GestionPersonnel(new ServiceSalaire(), new ServiceRapport(), new ServiceLogs());
         
         app.ajouteSalarie("DEVELOPPEUR", "Alice", 50000, 6, "IT");
         app.ajouteSalarie("CHEF DE PROJET", "Bob", 60000, 4, "RH");
         app.ajouteSalarie("STAGIAIRE", "Charlie", 20000, 0, "IT");
         app.ajouteSalarie("DEVELOPPEUR", "Dan", 55000, 12, "IT");
         
-        String aliceId = (String) app.employes.get(0)[0];
+        String aliceId = app.employes.getFirst().getId();
         
         System.out.println("Salaire de Alice: " + app.calculSalaire(aliceId) + " €");
         System.out.println("Bonus de Alice: " + app.calculBonusAnnuel(aliceId) + " €");
-        
-        app.generationRapport("SALAIRE", "IT");
-        app.generationRapport("EQUIPE", null);
+
+        System.out.println(app.generationRapport("SALAIRE", "IT"));
+        System.out.println(app.generationRapport("EQUIPE", null));
         
         app.avancementEmploye(aliceId, "CHEF DE PROJET");
         
